# netch-vpn-client

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: ASSUMPTIONS.md  TESTPLAN.md
scripts/: fetch-singbox.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: elevate.rs  lib.rs  main.rs  netfw.rs  sidecar.rs
src/lib/: engine.ts  format.ts
src/lib/clash/: client.ts
src/lib/import/: index.ts  links.ts  util.ts
src/lib/singbox/: config.ts
src/screens/: Dashboard.tsx  Import.tsx  Logs.tsx  ProfileEditModal.tsx  Profiles.tsx  Settings.tsx
src/store/: store.ts
src/styles/: theme.css
src/types/: index.ts
